# cmake_c_unittest_comparison

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  template.md
main/: CMakeLists.txt  main.c
module_sum/: CMakeLists.txt  sum.c  sum.h
modules/: CMakeLists.txt  utils.c  utils.h
test/cunit/suite_1/: CMakeLists.txt  suite_1.c
tests/cunit/: CMakeLists.txt
tests/cunit/multi_suite/: CMakeLists.txt  multi_suite_a.c  multi_suite_b.c
tests/cunit/single_suite/: single_suite.c
tests/cunit/suite_1/: CMakeLists.txt  suite_1.c
tests/cunit/suite_2/: CMakeLists.txt  suite_2.c
tests/glib/: CMakeLists.txt
tests/glib/multi_suite/: CMakeLists.txt  multi_suite_a.c  multi_suite_a.h  multi_suite_b.c  multi_suite_main.c
tests/glib/single_suite/: CMakeLists.txt  single_suite copy.c  single_suite.c
tests/libcester/: CMakeLists.txt
tests/libcester/single_suite/: CMakeLists.txt  single_suite.c
tests/unity/multi_suite/: CMakeLists.txt  multi_suite_a.c  multi_suite_a.h  multi_suite_b.c  multi_suite_b.h  multi_suite_main.c
tests/unity/single_suite/: CMakeLists.txt  single_suite.c
